# grading

./: .gitignore  README.md  cutgrade.py  cutgrade.sh  grading.py  setup.cfg  splitpdf.py
grading/: accion.py  grading.py
test/: myfolder_apostrophe_graded.csv  myfolder_dot_graded.csv  myfolder_graded.csv  to_grade.csv  to_grade_bar.csv  to_grade_semicolon.csv  to_grade_tab.csv
