[metadata]
name = grading
version = 0.0.4
aruthor= Fernando Muro
author_email = fmuro@us.es
description = Fill grading spreadsheets from PDF file names
license = GPL-3.0

[options]
packages = grading
install_requires =
    matching @ git+https://github.com/FMuro/matching.git#egg=matching

[options.entry_points]
console_scripts =
    grading = grading.accion:grade_spreadsheet

[options.package_data]
grading = *